osek/test/FreeOSEK/Error/Test_Sequence_02/test.h
#ifndef _CTEST_EH_02_H_
#define _CTEST_EH_02_H_
/** \brief Free OSEK Conformance Test 
 **
 ** \file FreeOSEK/tst/ctest/inc/ctest_eh_02.h
 **/

/** \addtogroup FreeOSEK
 ** @{ */
/** \addtogroup FreeOSEK_CT Conformance Test
 ** @{ */
/** \addtogroup FreeOSEK_CT_EH Error Handling
 ** @{ */
/** \addtogroup FreeOSEK_CT_EH_02 Test Sequence 2
 ** @{ */

/*
 * Initials     Name
 * ---------------------------
 * MaCe			 Mariano Cerdeiro
 */

/*
 * modification history (new versions first)
 * -----------------------------------------------------------
 * 20090418 v0.1.0 MaCe	initial version based on module tests
 */  

/*==================[inclusions]=============================================*/
#include "Std_Types.h"
#include "ctest.h"

/*==================[macros]=================================================*/
/** \brief Maximal Sequence
 **
 ** Defines the total amount of sequence points in this test sequence
 **/
#define MAX_SEQUENCE 3

/*==================[typedef]================================================*/

/*==================[external data declaration]==============================*/

/*==================[external functions declaration]=========================*/

/** @} doxygen end group definition */
/** @} doxygen end group definition */
/** @} doxygen end group definition */
/** @} doxygen end group definition */
/*==================[end of file]============================================*/
#endif /* #ifndef _CTEST_EH_02_H_ */

